# warbler

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  db.rs  grounding.rs  lib.rs  main.rs  mcp.rs  models.rs  prompts.rs  utils.rs
src/components/chat/: ChatHeader.svelte  ChatInput.svelte  ChatView.svelte  MessageItem.svelte  MessageList.svelte  ToolsPanel.svelte
src/components/modals/: McpModal.svelte  PromptModal.svelte
src/components/sidebar/: BrandHeader.svelte  ChatList.svelte  ConnectionSettings.svelte  KnowledgeSection.svelte  McpSection.svelte  ModelSettings.svelte  PromptSection.svelte  Sidebar.svelte
src/lib/: markdown.ts  services.ts  stores.ts
src/routes/: +page.svelte
